started with gsap

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <section class="todo">
       <section class="task_header">
-        <h2>12 Feb 2021</h2>
+        <h2 id="date">12 Feb 2021</h2>
         <div class="avatar">
           <!-- <img src="" alt="avatar" /> -->
         </div>
@@ -68,6 +68,8 @@
         </section>
       </main>
     </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
+    <script src="gsap_animations.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
