--- a/index.html
+++ b/index.html
@@ -37,33 +37,24 @@
           <div class="task_container new_tasks">
             <div id="add_newTask">+</div>
             <h2 id="task_incomplete" class="task_header">Task</h2>
-            <ul class="task_list">
-              <h4 id="no_task_text">
-                You don't have anything scheduled today yet
-              </h4>
-            </ul>
+            <h4 id="no_task_text">
+              You don't have anything scheduled today yet
+            </h4>
+            <ul class="task_list"></ul>
           </div>
         </section>
 
         <section class="task">
           <div class="task_container">
             <h2 id="task_in_progress" class="task_header">In Progress</h2>
-            <ul class="task_list">
-              <li class="list_item" draggable="true"><p>Task 1</p></li>
-              <li class="list_item" draggable="true"><p>Task 1</p></li>
-              <li class="list_item" draggable="true"><p>Task 1</p></li>
-            </ul>
+            <ul class="task_list"></ul>
           </div>
         </section>
 
         <section class="task">
           <div class="task_container">
             <h2 id="task_completed" class="task_header">Completed</h2>
-            <ul class="task_list">
-              <li class="list_item" draggable="true"><p>Task 1</p></li>
-              <li class="list_item" draggable="true"><p>Task 1</p></li>
-              <li class="list_item" draggable="true"><p>Task 1</p></li>
-            </ul>
+            <ul class="task_list"></ul>
           </div>
         </section>
       </main>
